--- a/WebOsadnici/Views/Home/Index.cshtml
+++ b/WebOsadnici/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using WebOsadnici.Models.HerniTridy
 @inject SignInManager<Hrac> SignInManager
 @inject UserManager<Hrac> UserManager
 @{
