--- a/WebOsadnici/Views/Hra/Pripojit.cshtml
+++ b/WebOsadnici/Views/Hra/Pripojit.cshtml
@@ -40,7 +40,7 @@
 
             </select>
 
-            <button type="submit">Odeslat</button>
+            <button type="submit" class="button">Odeslat</button>
         </form>
     </div>
     <div id="map-container" style="width: @(Mapka.RozmeryMrizky.Width*@Pole.Velikost.Width*6)px">
