--- a/WebOsadnici/Views/Home/Index.cshtml
+++ b/WebOsadnici/Views/Home/Index.cshtml
@@ -7,11 +7,11 @@
 }
 
 <div class="text-center">
-    @if (SignInManager.IsSignedIn(User))
+    @if (SignInManager.IsSignedIn(User) && ViewBag.hrac!=null)
     {
         <div class="nadpis">
             <h1>Dostupné hry:</h1>
-            <a class="button" href="Hra/Nova">Nová hra</a>
+            <a class="button hra" href="Hra/Nova">Nová hra</a>
         </div>
         <section>
             <header>
@@ -23,8 +23,7 @@
                     <li>
                         <a class="hra" asp-area="" asp-controller="Hra" asp-action="Prubeh" asp-route-id="@h.Id">
                             <div class="list-hra-detail">
-                                <img src="https://fastly.picsum.photos/id/17/2500/1667.jpg?hmac=HD-JrnNUZjFiP2UZQvWcKrgLoC_pc_ouUSWv8kHsJJY"
-                                     alt="obrazek">
+                                <img src="nahled.png" alt="obrazek">
                                 <div class="list-polozka-text">
                                     @foreach (Hrac hrac in h.hraci)
                                     {
@@ -59,8 +58,32 @@
                     <li>
                         <a class="hra" asp-area="" asp-controller="Hra" asp-action="Pripojit" asp-route-id="@h.Id">
                             <div class="list-hra-detail">
-                                <img src="https://fastly.picsum.photos/id/17/2500/1667.jpg?hmac=HD-JrnNUZjFiP2UZQvWcKrgLoC_pc_ouUSWv8kHsJJY"
-                                     alt="obrazek">
+                                <img src="nahled.png" alt="obrazek">
+                                <div class="list-polozka-text">
+                                    @foreach (Hrac hrac in h.hraci)
+                                    {
+                                        <div class="list-hra-ostatni">
+                                            @hrac.UserName
+                                        </div>
+                                    }
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                }
+            </ul>
+        </section>
+        <section>
+            <header>
+                <h2>Moje ukončené hry:</h2>
+            </header>
+            <ul class="list-her">
+                @foreach (Hra h in ViewBag.ukoncene)
+                {
+                    <li>
+                        <a class="hra" asp-area="" asp-controller="Hra" asp-action="Prubeh" asp-route-id="@h.Id">
+                            <div class="list-hra-detail">
+                                <img src="nahled.png" alt="obrazek">
                                 <div class="list-polozka-text">
                                     @foreach (Hrac hrac in h.hraci)
                                     {
@@ -79,11 +102,18 @@
     }
     else
     {
-        <p>Nejsi přihlášený + obrázek</p>
+        <h1>Osadníci z Katanu</h1>
+        <p>Vítejte v naší webové aplikaci!</p>
+        <p>Přihlaste se nebo se zaregistrujte pro další zážitky.</p>
+        <span class="index_tlacitka">
+            <a class="button" asp-area="Identity" asp-page="/Account/Register">Registerace</a>
+            <a class="button" asp-area="Identity" asp-page="/Account/Login">Přihlášení</a>
+        </span>
+        
     }
 </div>
 
 <script src="~/js/nacitani.js"></script>
-<div id="loading-message" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: rgba(255, 255, 255, 0.8); padding: 20px; border-radius: 10px; z-index: 9999; border: 1px solid black;">
+<div id="loading-message" class="vyskakovaci_okno">
     Probíhá načítání hry... Čekejte prosím
 </div>
