--- a/WebOsadnici/Views/Shared/_Layout.cshtml
+++ b/WebOsadnici/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3 text-light bg-dark">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow text-light bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Osadnici</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
