--- a/WebOsadnici/Views/Home/Index.cshtml
+++ b/WebOsadnici/Views/Home/Index.cshtml
@@ -102,7 +102,7 @@
     }
     else
     {
-        <h1>Osadníci z Katanu</h1>
+        <h1>Osadníci-Web</h1>
         <p>Vítejte v naší webové aplikaci!</p>
         <p>Přihlaste se nebo se zaregistrujte pro další zážitky.</p>
         <span class="index_tlacitka">
