--- a/WebOsadnici/Views/Hra/Pripojit.cshtml
+++ b/WebOsadnici/Views/Hra/Pripojit.cshtml
@@ -43,7 +43,7 @@
             <button type="submit" class="button">Odeslat</button>
         </form>
     </div>
-    <div id="map-container" style="width: @(Mapka.RozmeryMrizky.Width*@Pole.Velikost.Width*6)px">
+    <div id="map-container" style="width: @(Mapka.RozmeryMrizky.Width*Pole.Velikost.Width*6)px">
         <partial name="Mapka" />
     </div>
 </div>
